--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.cdnfonts.com/css/ds-digital');
 @import "tailwindcss";
-@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 
 :root {
     background-color: black;
     color: #f8f8f2;
+    font-family: 'DS-Digital', sans-serif;
 }
